@@ -8,6 +8,9 @@ Changes in version 1.2.1
 * Optimised the Probability class so that it doesn't make an RNG call when the
   probability is 1.
 
+* Added swapSubstring method to enable efficient exchange of data between two
+  BitStrings.
+
 
 Changes in verison 1.2
 ----------------------
